Fixed layout bug

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -114,7 +114,7 @@
     opacity: .3;
     background-color: white;
     position: fixed;
-    top: 0;
+    top: -110px;
     right: 0;
     bottom: 0;
     left: 0;
@@ -124,7 +124,7 @@
 
 .fullscreen-bg {
     position: fixed;
-    top: 0;
+    top: -110px;
     right: 0;
     bottom: 0;
     left: 0;
